AO3-4350 Really fix the off-center modules

--- a/public/stylesheets/site/2.0/26-media-narrow.css
+++ b/public/stylesheets/site/2.0/26-media-narrow.css
@@ -140,8 +140,9 @@ body .narrow-shown {
   padding: 0;
 }
 
-.splash div.module, .logged-in .splash .module {
-  margin: auto 1%;
+.splash div.module, .logged-in .splash > .module {
+  margin-left: 1%;
+  margin-right: 1%;
   width: 98%;
 }
 
